--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,33 @@ body
 {
     left: 0%;
 }
+
+nav .start-home, a:nth-child(1):hover~.animation{
+	width: 60px;
+	left: 39.4rem;
+    background-color: #f88cd4;
+}
+
+nav a:nth-child(2):hover~.animation{
+	width: 78px;
+	left: 44.72rem;
+    background-color: yellow;
+}
+
+nav a:nth-child(3):hover~.animation{
+	width: 70px;
+	left: 51.3rem;
+    background-color: #f88cd4;
+}
+
+nav a:nth-child(4):hover~.animation{
+	width: 78px;
+	left: 57.25rem;
+    background-color: #5c31ff;
+}
+
+nav a:nth-child(5):hover~.animation{
+	width: 97.6px;
+	left: 63.6rem;
+    background-color: #f88cd4;
+}
