--- a/src/index.css
+++ b/src/index.css
@@ -4,55 +4,60 @@
     font-family: font1;
     src: url("font/5ffcd643561bc25a1e7a87ac_GRIFTER™+Bold.otf");
 }
+
 @font-face {
     font-family: font2;
     src: url("font/CircularXXWeb-Book (1).woff2");
 }
+
 @font-face {
     font-family: font3;
     src: url("font/Noa26Uj3zpmBOgbNpOIznalWHCs.woff2");
 }
+
 @font-face {
     font-family: font4;
     src: url("font/Noa26Uj3zpmBOgbNpOJ7m6lWHCs.woff2");
 }
+
 @font-face {
     font-family: font5;
     src: url("font/Noa26Uj3zpmBOgbNpOJXnKlWHCs.woff2");
 }
+
 @font-face {
     font-family: font6;
     src: url("font/Noax6Uj3zpmBOgbNpOqIuLw.woff2");
 }
+
 @font-face {
     font-family: font7;
     src: url("font/rP2rp2ywxg089UriCZaSExd86J3t9jz86Mvy4qCRAL19DksVat-JDV30TGc.woff2");
 }
+
 @font-face {
     font-family: font8;
     src: url("font/rP2Yp2ywxg089UriI5-g4vlH9VoD8Cmcqbu0-K4 (1).woff2");
 }
 
 
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html,body
-{
+html,
+body {
     width: 100%;
     height: 100%;
 }
-body
-{
-    min-height: 100vh;    
+
+body {
+    min-height: 100vh;
 }
 
-.hero_gradient1
-{
+.hero_gradient1 {
     position: fixed;
     left: auto;
     top: auto;
@@ -66,8 +71,8 @@ body
     background-image: radial-gradient(circle farthest-corner at 50% 50%, #5c31ff, rgba(92, 49, 255, 0) 69%);
     opacity: 0.9;
 }
-.hero_gradient2
-{
+
+.hero_gradient2 {
     position: fixed;
     top: 0;
     left: 0;
@@ -78,8 +83,7 @@ body
     background-image: radial-gradient(circle farthest-corner at 50% 50%, #f88cd4, rgba(248, 140, 212, 0) 69%);
 }
 
-.line1::before
-{
+.line1::before {
     content: '';
     position: absolute;
     top: 0;
@@ -89,8 +93,8 @@ body
     background-color: blue;
     transition: all 0.3s;
 }
-.line2::before
-{
+
+.line2::before {
     content: '';
     position: absolute;
     top: 0;
@@ -101,41 +105,84 @@ body
     transition: all 0.3s;
     transition-delay: 0.2s;
 }
-.lines:hover .line1::before
-{
-    left: 0%;
-}
-.lines:hover .line2::before
-{
+
+.lines:hover .line1::before {
     left: 0%;
 }
 
-nav .start-home, a:nth-child(1):hover~.animation{
-	width: 60px;
-	left: 39.4rem;
+.lines:hover .line2::before {
+    left: 0%;
+}
+
+nav .start-home,
+a:nth-child(1):hover~.animation {
+    width: 60px;
+    left: 39.4rem;
     background-color: #f88cd4;
 }
 
-nav a:nth-child(2):hover~.animation{
-	width: 78px;
-	left: 44.72rem;
+nav a:nth-child(2):hover~.animation {
+    width: 78px;
+    left: 44.72rem;
     background-color: yellow;
 }
 
-nav a:nth-child(3):hover~.animation{
-	width: 70px;
-	left: 51.3rem;
+nav a:nth-child(3):hover~.animation {
+    width: 70px;
+    left: 51.3rem;
     background-color: #f88cd4;
 }
 
-nav a:nth-child(4):hover~.animation{
-	width: 78px;
-	left: 57.25rem;
+nav a:nth-child(4):hover~.animation {
+    width: 78px;
+    left: 57.25rem;
     background-color: #5c31ff;
 }
 
-nav a:nth-child(5):hover~.animation{
-	width: 97.6px;
-	left: 63.6rem;
+nav a:nth-child(5):hover~.animation {
+    width: 97.6px;
+    left: 63.6rem;
     background-color: #f88cd4;
+}
+
+
+/* responsive */
+@media (max-width : 766px) {
+    nav {
+        padding: 0 1rem !important;
+    }
+
+    .left {
+        padding-top: 6rem !important;
+    }
+
+    .right {
+        padding-top: 1rem !important;
+    }
+
+    .card {
+        padding: 1.5rem !important;
+    }
+
+    .para_div {
+        margin-top: 0.9rem !important;
+    }
+
+    .btn {
+        margin-top: 0.1rem !important;
+    }
+
+    .hero_gradient1 {
+        width: 180em;
+        height: 180em;
+        margin-right: -135.7em;
+        margin-bottom: -133.1em;
+    }
+
+    .hero_gradient2 {
+        width: 190em;
+        height: 190em;
+        margin-left: -90rem;
+        margin-top: 25rem;
+    }
 }
